feat: Update detectandsavetransaction and retrievealltransactionandbyhash
